Implemented a new Settings page